<resources>
    <string name="app_name" translatable="false">Litsa</string>



    <string name="facebook_app_id" translatable="false">@string/facebook_app_id_secret</string>
    <string name="fb_login_protocol_scheme" translatable="false">@string/fb_login_protocol_scheme_secret</string>
    <string name="facebook_client_token" translatable="false">@string/facebook_client_token_secret</string>


    <string name="email_verified_btn_txt">Email verified</string>
    <string name="resend_email">Resend email</string>
    <string name="resend_verification_email_toast">Verification Email send</string>

    <string name="firstname_hint">Firstname</string>
    <string name="lastname_hint">Lastname</string>
    <string name="phone_hint">Phone</string>
    <string name="e_mail_hint" translatable="false">E-mail</string>
    <string name="fb_profile_hint">FB Profile</string>
    <string name="password_hint">Password</string>
    <string name="compress_img_err">Error while loading file</string>
    <string name="profile_pic_saved">Photo saved!</string>
    <string name="profile_pic__not_saved">Photo not saved!</string>
    <string name="save_edits_btn_text">Save</string>
    <string name="email_changed">E-mail changed!</string>
    <string name="reAuth_authenticate_btn">Authenticate</string>
    <string name="authentication_failed">Authentication failed!</string>
    <string name="verification_dialog_title">Verification sent</string>
    <string name="verification_dialog_verify_email">Please verify %s and sign in again</string>
    <string name="cancel">Cancel</string>
    <string name="verification_dialog_err_txt">Email was not verified. Please try again.</string>
    <string name="updated_email_store_failure">New email failed to store. 0x2232</string>
    <string name="ok" translatable="false">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="phone_updated">Phone updated!</string>
    <string name="email_not_updated">Email not updated.</string>
    <string name="sign_out">Sign out</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="opening_hours" translatable="false">%s - %s</string>

    <string name="dismiss_dialog">Dismiss</string>
    <string name="notification_channe_name">Notifications</string>
    <string name="notification_channel_descr">General notifications</string>
    <string name="fb_login_canceled">Facebook login canceled</string>
    <string name="fb_login_err">Error logging in to Facebook</string>
    <string name="fb_login_success">Successfully logged in!</string>
    <string name="fb_login_app_missing_title">Facebook app is not installed</string>
    <string name="fb_login_install_app_msg">Please install Facebook app and try again.</string>
    <string name="fb_login_install_app">Install</string>
    <string name="fb_login_account_linked">Account linked</string>
    <string name="fb_login_account_not_linked">Account not linked</string>
    <string name="fb_login_link_account">Link account</string>
    <string name="fb_login_unlink_account">Unlink account</string>
    <string name="fb_login_account_unlink_success">Account unlinked</string>
    <string name="fb_login_account_unlink_failure">Account not unlinked</string>
    <string name="fb_login_profile_pic_title">Facebook profile photo</string>
    <string name="fb_login_profile_pic_msg">Do you want to use Facebook\'s profile photo as your profile photo?</string>
    <string name="notifications_title">Notifications</string>
    <string name="no_notifications">There are no notifications</string>
    <string name="menu_store_item_title">Info</string>
    <string name="menu_account_item_title">Account</string>
    <string name="re_auth_title">You need to authenticate in order to complete this action</string>
    <string name="value_updated">%s updated!</string>
    <string name="gender">Gender</string>
    <string name="female_gender_btn">Female</string>
    <string name="male_gender_btn">Male</string>
    <string name="any_gender_btn">Any</string>
    <string name="copied_to_clipboard">Copied to clipboard!</string>
    <string name="email_verification_txt_msg">A verification email have been send to <b>%s</b></string>
    <string name="store_closed">Closed</string>
    <string name="value_not_updated">%s not updated!</string>
</resources>