<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="gr.evasscissors.appointment.ui.auth.reauth.ReAuthViewModel" />

        <variable
            name="fragmentReAuth"
            type="gr.evasscissors.appointment.ui.auth.reauth.ReAuthFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.auth.reauth.ReAuthFragment">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/re_auth_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/re_auth_title"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/re_auth_title"
            app:layout_constraintBottom_toTopOf="@id/re_auth_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/re_auth_progress" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/re_auth_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_items_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/re_auth_title"
            app:startIconDrawable="@drawable/ic_lock_open_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="@dimen/profile_edit_edit_text_width"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                android:textSize="@dimen/text_size"
                tools:text="123456" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/re_auth_btn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="@dimen/profile_edit_edit_text_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_items_margin_top"
            android:enabled="@{viewModel.password.empty ? false : true }"
            android:onClick="@{() -> fragmentReAuth.reAuthenticate()}"
            android:text="@string/reAuth_authenticate_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/re_auth_password"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>